--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log\*
 
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
@@ -49,12 +50,13 @@ build/Release
 
 # Dependency directories
 
-build/
+backend/build/
 dist/
 node_modules/
 jspm_packages/
 package-lock.json
 yarn.lock
+backend/layers/
 
 # TypeScript v1 declaration files
 
